fix whitespace

--- a/src/css/elements/headlines.css
+++ b/src/css/elements/headlines.css
@@ -23,7 +23,7 @@ h2 {
 }
 
 h1 + h2 {
-  padding-top: 0;
+  padding-top: .5lh;
 }
 
 h2 + h3 {
